# vicr123-accounts

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Program.cs  SecurityKey.cs  dbusdaemon.h  logger.h  main.cpp  qjsonwebtoken.cmake  utils.cpp  utils.h  vicr123-accounts-dbus-config.conf  vicr123-accounts-fido.csproj  vicr123-accounts-fido.sln  vicr123-accounts.conf  vicr123-accounts.pro
.github/workflows/: docker.yml
Commands/: GetCommand.cs  PregetCommand.cs  PreregisterCommand.cs  RegisterCommand.cs
accounts-daemon/: CMakeLists.txt  accounts-daemon.pro  database.cpp  database.h  dbusdaemon.cpp  fidoutils.cpp  fidoutils.h  logger.cpp  mailtemplate.cpp  mailtemplate.h  main.cpp  resources.qrc  utils.cpp  utils.h  validation.cpp  validation.h  vicr123-accounts-dbus-config.conf  vicr123-accounts.conf
accounts-daemon/Webauthn/vicr123-accounts-fido/: Fido.cs  SecurityKey.cs  vicr123-accounts-fido.csproj
accounts-daemon/dbus/: accountmanager.cpp  accountmanager.h  fido2.cpp  fido2.h  mailmessage.cpp  mailmessage.h  passwordreset.cpp  passwordreset.h  twofactor.cpp  twofactor.h  user.cpp  user.h  useraccount.cpp  useraccount.h
accounts-daemon/mail/en/: recover  verify
accounts-daemon/mail/en/2fa-off/: htmlpart.html  meta.json  textpart.txt
accounts-daemon/mail/en/2fa-on/: htmlpart.html  meta.json  textpart.txt
accounts-daemon/mail/en/2fa-recovery-regenerated/: htmlpart.html  meta.json  textpart.txt
accounts-daemon/mail/en/fido-new-key/: htmlpart.html  meta.json  textpart.txt
accounts-daemon/mail/en/fido-remove-key/: htmlpart.html  meta.json  textpart.txt
accounts-daemon/mail/en/passwordchange/: htmlpart.html  meta.json  textpart.txt
accounts-daemon/mail/en/recover/: htmlpart.html  meta.json  textpart.txt
accounts-daemon/mail/en/verify/: htmlpart.html  meta.json  textpart.txt
accounts-daemon/sql/: init.sql  v2.sql
accounts-daemon/token-provisioning/: fidoprovisioningmethod.cpp  fidoprovisioningmethod.h  passwordprovisioningmethod.cpp  passwordprovisioningmethod.h  tokenprovisioningmanager.cpp  tokenprovisioningmanager.h  tokenprovisioningmethod.cpp  tokenprovisioningmethod.h
dbus/: accountmanager.cpp  accountmanager.h  user.cpp  user.h  useraccount.cpp  useraccount.h
sql/: init.sql
